have an good logic/code to have a well functionality

--- a/index.html
+++ b/index.html
@@ -114,9 +114,8 @@
                     <!-- <h2>Select Football League:</h2> -->
 
                     <div class='radios'>
-                        <input type="radio" name='league' class="theLeague" value="ABSA PREMIER LEAGUE"> ABSA PREMIER LEAGUE
-                        <input type="radio" name='league' class="theLeague" value="BARCLAYS PREMIER LEAGUE"> BARCLAYS PREMIER LEAGUE
-
+                        <input type="radio"name='league' class="theLeague" value="ABSA_PL"> ABSA PREMIER LEAGUE
+                        <input type="radio" name='league' class="theLeague" value="BARCLAYS_PL"> BARCLAYS PREMIER LEAGUE
                     </div>
                     <br>
 
@@ -126,8 +125,7 @@
 
                 </div>
             </div>
-
-            <div class='ABSA_PREMIER_LEAGUE hide'>
+            <div class='league ABSA_PL hide'>
                 <h3>Wellcome To The ABSA Premier League</h3>
                 <h3>Select Your Desired Field:</h3>
                 <!-- <ul> -->
@@ -143,13 +141,8 @@
             </div>
 
             <br>
-            <br>
-<<<<<<< HEAD
 
-
-=======
->>>>>>> a055f4b07e6221a6b60fd7931a001635ad77f5f4
-            <div class='BARCLAYS_PREMIER_LEAGUE hide'>
+            <div class='league BARCLAYS_PL hide'>
                 <h3>Wellcome To The Barclays Premier League!:</h3>
                 <h3>Select Your Desired Field:</h3>
                 <input type='button' value='News' id='newsBtn'>
