have a functional code/logic usable to users

--- a/index.html
+++ b/index.html
@@ -126,15 +126,15 @@
 
 
             <div class='league ABSA_PL hide'>
-                <h3>Wellcome To The ABSA Premier League</h3>
+                <h3>Wellcome To The ABSA PremierShip!</h3>
                 <h3>Select Your Desired Field:</h3>
-                <input type='button' value='News' id='newsBtn2'>
+                <input type='button' value='News' id='absaNews'>
                 <br>
                 <br>
-                <input type='button' value='Results' id='resultBtn2'>
+                <input type='button' value='Results' id='absaResults'>
                 <br>
                 <br>
-                <input type='button' value='logs' id='logsBtn2'>
+                <input type='button' value='logs' id='absaLog'>
             </div>
 
             <br>
@@ -142,13 +142,13 @@
             <div class='league BARCLAYS_PL hide'>
                 <h3>Wellcome To The Barclays Premier League!:</h3>
                 <h3>Select Your Desired Field:</h3>
-                <input type='button' value='News' id='newsBtn'>
+                <input type='button' value='News' id='barclaysNews'>
                 <br>
                 <br>
-                <input type='button' value='Results' id='resultBtn'>
+                <input type='button' value='Results' id='barclaysResults'>
                 <br>
                 <br>
-                <input type='button' value='logs' id='logsBtn'>
+                <input type='button' value='logs' id='barclaysLog'>
                 <br>
 
                 <br>
