--- a/index.html
+++ b/index.html
@@ -14,7 +14,6 @@
         {{/each}}
     </script>
 
-
     <script class='info-Template' type='text/Handlebars-x'>
         {{#each info}} {{ManChester United}} {{Chelsea}} {{/each}}
     </script>
@@ -94,12 +93,10 @@
         </span>
 
     </script>
-    <!-- <input type="button" name="filterButton" value=""> -->
 
 </head>
 
 <body>
-  <p id='league'></p>
 
     <div class='container2 activeModal'>
         <div class='displayingField formActive'>
@@ -112,11 +109,10 @@
                 <h4>Select Favourate League:</h4>
 
                 <div class='container'>
-                    <!-- <h2>Select Football League:</h2> -->
 
                     <div class='radios'>
-                        <input type="radio" name='league' class="theLeague" value="ABSA PREMIER LEAGUE"> ABSA PREMIER LEAGUE
-                        <input type="radio" name='league' class="theLeague" value="BARCLAYS PREMIER LEAGUE"> BARCLAYS PREMIER LEAGUE
+                        <input type="radio" name='league' class="theLeague" value="ABSA_PL"> ABSA PREMIER LEAGUE
+                        <input type="radio" name='league' class="theLeague" value="BARCLAYS_PL"> BARCLAYS PREMIER LEAGUE
 
                     </div>
                     <br>
@@ -129,33 +125,30 @@
             </div>
 
 
-            <div class='ABSA_PREMIER_LEAGUE hide'>
-                <h3>Wellcome To The ABSA Premier League</h3>
+            <div class='league ABSA_PL hide'>
+                <h3>Wellcome To The ABSA PremierShip!</h3>
                 <h3>Select Your Desired Field:</h3>
-                <!-- <ul> -->
-                <!-- <li> -->
-                <input type='button' value='News' id='newsBtn2'>
-                <!-- </li> -->
+                <input type='button' value='News' id='absaNews'>
                 <br>
                 <br>
-                <input type='button' value='Results' id='resultBtn2'>
+                <input type='button' value='Results' id='absaResults'>
                 <br>
                 <br>
-                <input type='button' value='logs' id='logsBtn2'>
+                <input type='button' value='logs' id='absaLog'>
             </div>
 
             <br>
             <br>
-            <div class='BARCLAYS_PREMIER_LEAGUE hide'>
+            <div class='league BARCLAYS_PL hide'>
                 <h3>Wellcome To The Barclays Premier League!:</h3>
                 <h3>Select Your Desired Field:</h3>
-                <input type='button' value='News' id='newsBtn'>
+                <input type='button' value='News' id='barclaysNews'>
                 <br>
                 <br>
-                <input type='button' value='Results' id='resultBtn'>
+                <input type='button' value='Results' id='barclaysResults'>
                 <br>
                 <br>
-                <input type='button' value='logs' id='logsBtn'>
+                <input type='button' value='logs' id='barclaysLog'>
                 <br>
 
                 <br>
